--- a/vercel.json
+++ b/vercel.json
@@ -4,8 +4,7 @@
    "builds": [
     {
       "src": "app.py",
-      "use": "@vercel/python",
-      "config": { "runtime": "python3.9" }
+      "use": "@vercel/python"
     }
   ],
   "routes": [
